- When passing map movement keys through to the map from DFHack tool windows, also pass fast z movements (shift-scroll by default)
- `getplants`: fix crash when processing mod-added plants with invalid materials
- Dreamfort: fix holes in the "Inside+" burrow on the farming level (burrow autoexpand is interrupted by the pre-dug miasma vents to the surface)
- DFHack tabs (e.g. in `gui/control-panel`) are now rendered correctly when there is a vanilla tab behind them

## Misc Improvements
- `autochop`: better error output when target burrows are not specified on the commandline
- `autoclothing` : now does not consider worn (x) clothing as usable/available, should help with using with `tailor` at same time
- `burrow`: flood fill now requires an explicit toggle before it is enabled to help prevent accidental flood fills
- wherever units are listed in DFHack tools, properties like "agitated" or (-trained-) are now shown
- `work-now`: now saves its enabled status with the fort
- `fastdwarf`: now saves its state with the fort
- `fastdwarf`: prevent units from teleporting to inaccessible areas when in teledwarf mode
- `fastdwarf`: allow units to meander and satisfy needs when they have no current job and teledwarf mode is enabled
- `zone`: add include/only/exclude filter for juveniles to the pasture/pit/cage/restraint assignment screen
- The "PAUSE FORCED" badge will blink briefly to draw attention if the player attempts to unpause when a DFHack tool window requires the game to be paused
- `sort`: add "Toggle all filters" hotkey button to the squad assignment panel
- `sort`: rename "Weak mental fortitude" filter to "Dislikes combat", which should be more understandable
- Dreamfort: put more chairs adjacent to each other to make the tavern more "social"
- `zone`: show geld status and custom profession (2nd editable line in creature description) in pasture/pit/cage/restraint assignment screen

## Documentation
- `installing`: Add installation instructions for wineskin on Mac